--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -15,10 +15,14 @@
     "urlPlaceholder": "Collez l'URL YouTube ici...",
     "addToQueue": "Ajouter",
     "emptyQueue": "Aucun téléchargement dans la file",
-    "emptyQueueHint": "Collez une URL YouTube ci-dessus pour commencer",
+    "emptyQueueHint": "Collez une URL YouTube ou importez un fichier texte",
     "startAll": "Tout démarrer",
     "pauseAll": "Tout mettre en pause",
     "clearCompleted": "Effacer les terminés",
+    "importFile": "Importer depuis un fichier",
+    "importFileHint": "Sélectionnez un fichier .txt avec des URLs YouTube (une par ligne)",
+    "importSuccess": "{{count}} URLs importées",
+    "importEmpty": "Aucune URL YouTube valide trouvée dans le fichier",
     "states": {
       "queued": "En file",
       "fetchingMetadata": "Récupération info...",
@@ -95,4 +99,3 @@
     "ffmpegNotFound": "FFmpeg non trouvé. Veuillez installer FFmpeg ou définir son chemin dans les paramètres."
   }
 }
-
