Refactor URL import functionality in UrlInput component. Implemented backend validation and deduplication for batch URL imports, enhancing user feedback for import results. Updated API methods and added new ImportResult interface for improved handling of import outcomes. Adjusted translations for clarity in user notifications.

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -22,7 +22,10 @@
     "importFile": "Import from file",
     "importFileHint": "Select a .txt file with YouTube URLs (one per line)",
     "importSuccess": "Imported {{count}} URLs",
-    "importEmpty": "No valid YouTube URLs found in file",
+    "importEmpty": "No URLs imported",
+    "importSkipped": "Skipped {{skipped}} duplicates, {{invalid}} invalid",
+    "importAllDuplicates": "All URLs are already in queue",
+    "importNoValid": "No valid YouTube URLs found in file",
     "states": {
       "queued": "Queued",
       "fetchingMetadata": "Fetching info...",
