--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -23,7 +23,10 @@
     "importFile": "Importer depuis un fichier",
     "importFileHint": "Sélectionnez un fichier .txt avec des URLs YouTube (une par ligne)",
     "importSuccess": "{{count}} URLs importées",
-    "importEmpty": "Aucune URL YouTube valide trouvée dans le fichier",
+    "importEmpty": "Aucune URL importée",
+    "importSkipped": "{{skipped}} doublons ignorés, {{invalid}} invalides",
+    "importAllDuplicates": "Toutes les URLs sont déjà dans la file",
+    "importNoValid": "Aucune URL YouTube valide trouvée dans le fichier",
     "states": {
       "queued": "En file",
       "fetchingMetadata": "Récupération info...",
@@ -81,9 +84,24 @@
       "format": "Format par défaut",
       "audioQuality": "Qualité audio",
       "videoQuality": "Qualité vidéo",
-      "concurrentDownloads": "Téléchargements simultanés",
-      "ffmpegPath": "Chemin FFmpeg",
-      "ffmpegPathHint": "Laisser vide pour détection automatique"
+      "concurrentDownloads": "Téléchargements simultanés"
+    },
+    "ffmpeg": {
+      "title": "FFmpeg",
+      "description": "Requis pour la conversion audio et les options de format",
+      "installed": "Installé",
+      "notInstalled": "Non installé",
+      "path": "Chemin",
+      "version": "Version",
+      "bundled": "Inclus avec l'app",
+      "notInstalledDesc": "FFmpeg n'est pas installé. Vous pouvez le télécharger automatiquement ou l'installer manuellement.",
+      "download": "Télécharger FFmpeg",
+      "starting": "Démarrage du téléchargement...",
+      "downloadComplete": "FFmpeg installé avec succès",
+      "downloadFailed": "Échec du téléchargement de FFmpeg",
+      "customPath": "Chemin FFmpeg personnalisé",
+      "customPathPlaceholder": "Laisser vide pour détection automatique",
+      "customPathHint": "Remplacer le FFmpeg détecté automatiquement par un chemin personnalisé"
     },
     "validation": {
       "pathRequired": "Le chemin est requis",
